parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> JSON
Rule 1     JSON -> brace_inicio BOOKS brace_final
Rule 2     BOOKS -> texto dos_puntos bracket_inicio BOOK_LIST bracket_final
Rule 3     BOOK_LIST -> brace_inicio BOOK_ENTRIES brace_final
Rule 4     BOOK_ENTRIES -> BOOK_ENTRY
Rule 5     BOOK_ENTRIES -> BOOK_ENTRY coma BOOK_ENTRIES
Rule 6     BOOK_ENTRY -> TITLE
Rule 7     BOOK_ENTRY -> AUTHOR
Rule 8     BOOK_ENTRY -> GENRE
Rule 9     BOOK_ENTRY -> PUBLICATION
Rule 10    BOOK_ENTRY -> ISBN
Rule 11    BOOK_ENTRY -> CHARACTERS
Rule 12    BOOK_ENTRY -> REVIEWS
Rule 13    TITLE -> texto dos_puntos texto coma
Rule 14    AUTHOR -> texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma
Rule 15    STRING -> texto dos_puntos texto
Rule 16    INT -> texto dos_puntos numero
Rule 17    AUTHOR_DETAILS -> STRING coma INT coma STRING
Rule 18    GENRE -> texto dos_puntos bracket_inicio texto coma texto bracket_final coma
Rule 19    PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma
Rule 20    ISBN -> texto dos_puntos brace_inicio STRING coma STRING brace_final coma
Rule 21    CHARACTERS -> texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma
Rule 22    CHARACTER_ENTRIES -> CHARACTER_ENTRY coma CHARACTER_ENTRY
Rule 23    CHARACTER_ENTRY -> brace_inicio STRING coma STRING brace_final
Rule 24    REVIEWS -> texto dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final
Rule 25    REVIEW_ENTRIES -> REVIEW_ENTRY coma REVIEW_ENTRY
Rule 26    REVIEW_ENTRY -> brace_inicio INT coma STRING brace_final

Terminals, with rules where they appear

brace_final          : 1 3 14 19 20 23 26
brace_inicio         : 1 3 14 19 20 23 26
bracket_final        : 2 18 21 24
bracket_inicio       : 2 18 21 24
coma                 : 5 13 14 17 17 18 18 19 19 19 20 20 21 22 23 25 26
dos_puntos           : 2 13 14 15 16 18 19 20 21 24
error                : 
numero               : 16
texto                : 2 13 13 14 15 15 16 18 18 18 19 20 21 24

Nonterminals, with rules where they appear

AUTHOR               : 7
AUTHOR_DETAILS       : 14
BOOKS                : 1
BOOK_ENTRIES         : 3 5
BOOK_ENTRY           : 4 5
BOOK_LIST            : 2
CHARACTERS           : 11
CHARACTER_ENTRIES    : 21
CHARACTER_ENTRY      : 22 22
GENRE                : 8
INT                  : 17 19 26
ISBN                 : 10
JSON                 : 0
PUBLICATION          : 9
REVIEWS              : 12
REVIEW_ENTRIES       : 24
REVIEW_ENTRY         : 25 25
STRING               : 17 17 19 19 20 20 23 23 26
TITLE                : 6

Parsing method: LALR

state 0

    (0) S' -> . JSON
    (1) JSON -> . brace_inicio BOOKS brace_final

    brace_inicio    shift and go to state 2

    JSON                           shift and go to state 1

state 1

    (0) S' -> JSON .



state 2

    (1) JSON -> brace_inicio . BOOKS brace_final
    (2) BOOKS -> . texto dos_puntos bracket_inicio BOOK_LIST bracket_final

    texto           shift and go to state 4

    BOOKS                          shift and go to state 3

state 3

    (1) JSON -> brace_inicio BOOKS . brace_final

    brace_final     shift and go to state 5


state 4

    (2) BOOKS -> texto . dos_puntos bracket_inicio BOOK_LIST bracket_final

    dos_puntos      shift and go to state 6


state 5

    (1) JSON -> brace_inicio BOOKS brace_final .

    $end            reduce using rule 1 (JSON -> brace_inicio BOOKS brace_final .)


state 6

    (2) BOOKS -> texto dos_puntos . bracket_inicio BOOK_LIST bracket_final

    bracket_inicio  shift and go to state 7


state 7

    (2) BOOKS -> texto dos_puntos bracket_inicio . BOOK_LIST bracket_final
    (3) BOOK_LIST -> . brace_inicio BOOK_ENTRIES brace_final

    brace_inicio    shift and go to state 9

    BOOK_LIST                      shift and go to state 8

state 8

    (2) BOOKS -> texto dos_puntos bracket_inicio BOOK_LIST . bracket_final

    bracket_final   shift and go to state 10


state 9

    (3) BOOK_LIST -> brace_inicio . BOOK_ENTRIES brace_final
    (4) BOOK_ENTRIES -> . BOOK_ENTRY
    (5) BOOK_ENTRIES -> . BOOK_ENTRY coma BOOK_ENTRIES
    (6) BOOK_ENTRY -> . TITLE
    (7) BOOK_ENTRY -> . AUTHOR
    (8) BOOK_ENTRY -> . GENRE
    (9) BOOK_ENTRY -> . PUBLICATION
    (10) BOOK_ENTRY -> . ISBN
    (11) BOOK_ENTRY -> . CHARACTERS
    (12) BOOK_ENTRY -> . REVIEWS
    (13) TITLE -> . texto dos_puntos texto coma
    (14) AUTHOR -> . texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma
    (18) GENRE -> . texto dos_puntos bracket_inicio texto coma texto bracket_final coma
    (19) PUBLICATION -> . texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma
    (20) ISBN -> . texto dos_puntos brace_inicio STRING coma STRING brace_final coma
    (21) CHARACTERS -> . texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma
    (24) REVIEWS -> . texto dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final

    texto           shift and go to state 20

    BOOK_ENTRIES                   shift and go to state 11
    BOOK_ENTRY                     shift and go to state 12
    TITLE                          shift and go to state 13
    AUTHOR                         shift and go to state 14
    GENRE                          shift and go to state 15
    PUBLICATION                    shift and go to state 16
    ISBN                           shift and go to state 17
    CHARACTERS                     shift and go to state 18
    REVIEWS                        shift and go to state 19

state 10

    (2) BOOKS -> texto dos_puntos bracket_inicio BOOK_LIST bracket_final .

    brace_final     reduce using rule 2 (BOOKS -> texto dos_puntos bracket_inicio BOOK_LIST bracket_final .)


state 11

    (3) BOOK_LIST -> brace_inicio BOOK_ENTRIES . brace_final

    brace_final     shift and go to state 21


state 12

    (4) BOOK_ENTRIES -> BOOK_ENTRY .
    (5) BOOK_ENTRIES -> BOOK_ENTRY . coma BOOK_ENTRIES

    brace_final     reduce using rule 4 (BOOK_ENTRIES -> BOOK_ENTRY .)
    coma            shift and go to state 22


state 13

    (6) BOOK_ENTRY -> TITLE .

    coma            reduce using rule 6 (BOOK_ENTRY -> TITLE .)
    brace_final     reduce using rule 6 (BOOK_ENTRY -> TITLE .)


state 14

    (7) BOOK_ENTRY -> AUTHOR .

    coma            reduce using rule 7 (BOOK_ENTRY -> AUTHOR .)
    brace_final     reduce using rule 7 (BOOK_ENTRY -> AUTHOR .)


state 15

    (8) BOOK_ENTRY -> GENRE .

    coma            reduce using rule 8 (BOOK_ENTRY -> GENRE .)
    brace_final     reduce using rule 8 (BOOK_ENTRY -> GENRE .)


state 16

    (9) BOOK_ENTRY -> PUBLICATION .

    coma            reduce using rule 9 (BOOK_ENTRY -> PUBLICATION .)
    brace_final     reduce using rule 9 (BOOK_ENTRY -> PUBLICATION .)


state 17

    (10) BOOK_ENTRY -> ISBN .

    coma            reduce using rule 10 (BOOK_ENTRY -> ISBN .)
    brace_final     reduce using rule 10 (BOOK_ENTRY -> ISBN .)


state 18

    (11) BOOK_ENTRY -> CHARACTERS .

    coma            reduce using rule 11 (BOOK_ENTRY -> CHARACTERS .)
    brace_final     reduce using rule 11 (BOOK_ENTRY -> CHARACTERS .)


state 19

    (12) BOOK_ENTRY -> REVIEWS .

    coma            reduce using rule 12 (BOOK_ENTRY -> REVIEWS .)
    brace_final     reduce using rule 12 (BOOK_ENTRY -> REVIEWS .)


state 20

    (13) TITLE -> texto . dos_puntos texto coma
    (14) AUTHOR -> texto . dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma
    (18) GENRE -> texto . dos_puntos bracket_inicio texto coma texto bracket_final coma
    (19) PUBLICATION -> texto . dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma
    (20) ISBN -> texto . dos_puntos brace_inicio STRING coma STRING brace_final coma
    (21) CHARACTERS -> texto . dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma
    (24) REVIEWS -> texto . dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final

    dos_puntos      shift and go to state 23


state 21

    (3) BOOK_LIST -> brace_inicio BOOK_ENTRIES brace_final .

    bracket_final   reduce using rule 3 (BOOK_LIST -> brace_inicio BOOK_ENTRIES brace_final .)


state 22

    (5) BOOK_ENTRIES -> BOOK_ENTRY coma . BOOK_ENTRIES
    (4) BOOK_ENTRIES -> . BOOK_ENTRY
    (5) BOOK_ENTRIES -> . BOOK_ENTRY coma BOOK_ENTRIES
    (6) BOOK_ENTRY -> . TITLE
    (7) BOOK_ENTRY -> . AUTHOR
    (8) BOOK_ENTRY -> . GENRE
    (9) BOOK_ENTRY -> . PUBLICATION
    (10) BOOK_ENTRY -> . ISBN
    (11) BOOK_ENTRY -> . CHARACTERS
    (12) BOOK_ENTRY -> . REVIEWS
    (13) TITLE -> . texto dos_puntos texto coma
    (14) AUTHOR -> . texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma
    (18) GENRE -> . texto dos_puntos bracket_inicio texto coma texto bracket_final coma
    (19) PUBLICATION -> . texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma
    (20) ISBN -> . texto dos_puntos brace_inicio STRING coma STRING brace_final coma
    (21) CHARACTERS -> . texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma
    (24) REVIEWS -> . texto dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final

    texto           shift and go to state 20

    BOOK_ENTRY                     shift and go to state 12
    BOOK_ENTRIES                   shift and go to state 24
    TITLE                          shift and go to state 13
    AUTHOR                         shift and go to state 14
    GENRE                          shift and go to state 15
    PUBLICATION                    shift and go to state 16
    ISBN                           shift and go to state 17
    CHARACTERS                     shift and go to state 18
    REVIEWS                        shift and go to state 19

state 23

    (13) TITLE -> texto dos_puntos . texto coma
    (14) AUTHOR -> texto dos_puntos . brace_inicio AUTHOR_DETAILS brace_final coma
    (18) GENRE -> texto dos_puntos . bracket_inicio texto coma texto bracket_final coma
    (19) PUBLICATION -> texto dos_puntos . brace_inicio STRING coma INT coma STRING brace_final coma
    (20) ISBN -> texto dos_puntos . brace_inicio STRING coma STRING brace_final coma
    (21) CHARACTERS -> texto dos_puntos . bracket_inicio CHARACTER_ENTRIES bracket_final coma
    (24) REVIEWS -> texto dos_puntos . bracket_inicio REVIEW_ENTRIES bracket_final

    texto           shift and go to state 25
    brace_inicio    shift and go to state 26
    bracket_inicio  shift and go to state 27


state 24

    (5) BOOK_ENTRIES -> BOOK_ENTRY coma BOOK_ENTRIES .

    brace_final     reduce using rule 5 (BOOK_ENTRIES -> BOOK_ENTRY coma BOOK_ENTRIES .)


state 25

    (13) TITLE -> texto dos_puntos texto . coma

    coma            shift and go to state 28


state 26

    (14) AUTHOR -> texto dos_puntos brace_inicio . AUTHOR_DETAILS brace_final coma
    (19) PUBLICATION -> texto dos_puntos brace_inicio . STRING coma INT coma STRING brace_final coma
    (20) ISBN -> texto dos_puntos brace_inicio . STRING coma STRING brace_final coma
    (17) AUTHOR_DETAILS -> . STRING coma INT coma STRING
    (15) STRING -> . texto dos_puntos texto

    texto           shift and go to state 29

    AUTHOR_DETAILS                 shift and go to state 30
    STRING                         shift and go to state 31

state 27

    (18) GENRE -> texto dos_puntos bracket_inicio . texto coma texto bracket_final coma
    (21) CHARACTERS -> texto dos_puntos bracket_inicio . CHARACTER_ENTRIES bracket_final coma
    (24) REVIEWS -> texto dos_puntos bracket_inicio . REVIEW_ENTRIES bracket_final
    (22) CHARACTER_ENTRIES -> . CHARACTER_ENTRY coma CHARACTER_ENTRY
    (25) REVIEW_ENTRIES -> . REVIEW_ENTRY coma REVIEW_ENTRY
    (23) CHARACTER_ENTRY -> . brace_inicio STRING coma STRING brace_final
    (26) REVIEW_ENTRY -> . brace_inicio INT coma STRING brace_final

    texto           shift and go to state 32
    brace_inicio    shift and go to state 37

    CHARACTER_ENTRIES              shift and go to state 33
    REVIEW_ENTRIES                 shift and go to state 34
    CHARACTER_ENTRY                shift and go to state 35
    REVIEW_ENTRY                   shift and go to state 36

state 28

    (13) TITLE -> texto dos_puntos texto coma .

    coma            reduce using rule 13 (TITLE -> texto dos_puntos texto coma .)
    brace_final     reduce using rule 13 (TITLE -> texto dos_puntos texto coma .)


state 29

    (15) STRING -> texto . dos_puntos texto

    dos_puntos      shift and go to state 38


state 30

    (14) AUTHOR -> texto dos_puntos brace_inicio AUTHOR_DETAILS . brace_final coma

    brace_final     shift and go to state 39


state 31

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING . coma INT coma STRING brace_final coma
    (20) ISBN -> texto dos_puntos brace_inicio STRING . coma STRING brace_final coma
    (17) AUTHOR_DETAILS -> STRING . coma INT coma STRING

    coma            shift and go to state 40


state 32

    (18) GENRE -> texto dos_puntos bracket_inicio texto . coma texto bracket_final coma

    coma            shift and go to state 41


state 33

    (21) CHARACTERS -> texto dos_puntos bracket_inicio CHARACTER_ENTRIES . bracket_final coma

    bracket_final   shift and go to state 42


state 34

    (24) REVIEWS -> texto dos_puntos bracket_inicio REVIEW_ENTRIES . bracket_final

    bracket_final   shift and go to state 43


state 35

    (22) CHARACTER_ENTRIES -> CHARACTER_ENTRY . coma CHARACTER_ENTRY

    coma            shift and go to state 44


state 36

    (25) REVIEW_ENTRIES -> REVIEW_ENTRY . coma REVIEW_ENTRY

    coma            shift and go to state 45


state 37

    (23) CHARACTER_ENTRY -> brace_inicio . STRING coma STRING brace_final
    (26) REVIEW_ENTRY -> brace_inicio . INT coma STRING brace_final
    (15) STRING -> . texto dos_puntos texto
    (16) INT -> . texto dos_puntos numero

    texto           shift and go to state 48

    STRING                         shift and go to state 46
    INT                            shift and go to state 47

state 38

    (15) STRING -> texto dos_puntos . texto

    texto           shift and go to state 49


state 39

    (14) AUTHOR -> texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final . coma

    coma            shift and go to state 50


state 40

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING coma . INT coma STRING brace_final coma
    (20) ISBN -> texto dos_puntos brace_inicio STRING coma . STRING brace_final coma
    (17) AUTHOR_DETAILS -> STRING coma . INT coma STRING
    (16) INT -> . texto dos_puntos numero
    (15) STRING -> . texto dos_puntos texto

    texto           shift and go to state 51

    STRING                         shift and go to state 52
    INT                            shift and go to state 53

state 41

    (18) GENRE -> texto dos_puntos bracket_inicio texto coma . texto bracket_final coma

    texto           shift and go to state 54


state 42

    (21) CHARACTERS -> texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final . coma

    coma            shift and go to state 55


state 43

    (24) REVIEWS -> texto dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final .

    coma            reduce using rule 24 (REVIEWS -> texto dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final .)
    brace_final     reduce using rule 24 (REVIEWS -> texto dos_puntos bracket_inicio REVIEW_ENTRIES bracket_final .)


state 44

    (22) CHARACTER_ENTRIES -> CHARACTER_ENTRY coma . CHARACTER_ENTRY
    (23) CHARACTER_ENTRY -> . brace_inicio STRING coma STRING brace_final

    brace_inicio    shift and go to state 57

    CHARACTER_ENTRY                shift and go to state 56

state 45

    (25) REVIEW_ENTRIES -> REVIEW_ENTRY coma . REVIEW_ENTRY
    (26) REVIEW_ENTRY -> . brace_inicio INT coma STRING brace_final

    brace_inicio    shift and go to state 59

    REVIEW_ENTRY                   shift and go to state 58

state 46

    (23) CHARACTER_ENTRY -> brace_inicio STRING . coma STRING brace_final

    coma            shift and go to state 60


state 47

    (26) REVIEW_ENTRY -> brace_inicio INT . coma STRING brace_final

    coma            shift and go to state 61


state 48

    (15) STRING -> texto . dos_puntos texto
    (16) INT -> texto . dos_puntos numero

    dos_puntos      shift and go to state 62


state 49

    (15) STRING -> texto dos_puntos texto .

    coma            reduce using rule 15 (STRING -> texto dos_puntos texto .)
    brace_final     reduce using rule 15 (STRING -> texto dos_puntos texto .)


state 50

    (14) AUTHOR -> texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma .

    coma            reduce using rule 14 (AUTHOR -> texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma .)
    brace_final     reduce using rule 14 (AUTHOR -> texto dos_puntos brace_inicio AUTHOR_DETAILS brace_final coma .)


state 51

    (16) INT -> texto . dos_puntos numero
    (15) STRING -> texto . dos_puntos texto

    dos_puntos      shift and go to state 63


state 52

    (20) ISBN -> texto dos_puntos brace_inicio STRING coma STRING . brace_final coma

    brace_final     shift and go to state 64


state 53

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT . coma STRING brace_final coma
    (17) AUTHOR_DETAILS -> STRING coma INT . coma STRING

    coma            shift and go to state 65


state 54

    (18) GENRE -> texto dos_puntos bracket_inicio texto coma texto . bracket_final coma

    bracket_final   shift and go to state 66


state 55

    (21) CHARACTERS -> texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma .

    coma            reduce using rule 21 (CHARACTERS -> texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma .)
    brace_final     reduce using rule 21 (CHARACTERS -> texto dos_puntos bracket_inicio CHARACTER_ENTRIES bracket_final coma .)


state 56

    (22) CHARACTER_ENTRIES -> CHARACTER_ENTRY coma CHARACTER_ENTRY .

    bracket_final   reduce using rule 22 (CHARACTER_ENTRIES -> CHARACTER_ENTRY coma CHARACTER_ENTRY .)


state 57

    (23) CHARACTER_ENTRY -> brace_inicio . STRING coma STRING brace_final
    (15) STRING -> . texto dos_puntos texto

    texto           shift and go to state 29

    STRING                         shift and go to state 46

state 58

    (25) REVIEW_ENTRIES -> REVIEW_ENTRY coma REVIEW_ENTRY .

    bracket_final   reduce using rule 25 (REVIEW_ENTRIES -> REVIEW_ENTRY coma REVIEW_ENTRY .)


state 59

    (26) REVIEW_ENTRY -> brace_inicio . INT coma STRING brace_final
    (16) INT -> . texto dos_puntos numero

    texto           shift and go to state 67

    INT                            shift and go to state 47

state 60

    (23) CHARACTER_ENTRY -> brace_inicio STRING coma . STRING brace_final
    (15) STRING -> . texto dos_puntos texto

    texto           shift and go to state 29

    STRING                         shift and go to state 68

state 61

    (26) REVIEW_ENTRY -> brace_inicio INT coma . STRING brace_final
    (15) STRING -> . texto dos_puntos texto

    texto           shift and go to state 29

    STRING                         shift and go to state 69

state 62

    (15) STRING -> texto dos_puntos . texto
    (16) INT -> texto dos_puntos . numero

    texto           shift and go to state 49
    numero          shift and go to state 70


state 63

    (16) INT -> texto dos_puntos . numero
    (15) STRING -> texto dos_puntos . texto

    numero          shift and go to state 70
    texto           shift and go to state 49


state 64

    (20) ISBN -> texto dos_puntos brace_inicio STRING coma STRING brace_final . coma

    coma            shift and go to state 71


state 65

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma . STRING brace_final coma
    (17) AUTHOR_DETAILS -> STRING coma INT coma . STRING
    (15) STRING -> . texto dos_puntos texto

    texto           shift and go to state 29

    STRING                         shift and go to state 72

state 66

    (18) GENRE -> texto dos_puntos bracket_inicio texto coma texto bracket_final . coma

    coma            shift and go to state 73


state 67

    (16) INT -> texto . dos_puntos numero

    dos_puntos      shift and go to state 74


state 68

    (23) CHARACTER_ENTRY -> brace_inicio STRING coma STRING . brace_final

    brace_final     shift and go to state 75


state 69

    (26) REVIEW_ENTRY -> brace_inicio INT coma STRING . brace_final

    brace_final     shift and go to state 76


state 70

    (16) INT -> texto dos_puntos numero .

    coma            reduce using rule 16 (INT -> texto dos_puntos numero .)


state 71

    (20) ISBN -> texto dos_puntos brace_inicio STRING coma STRING brace_final coma .

    coma            reduce using rule 20 (ISBN -> texto dos_puntos brace_inicio STRING coma STRING brace_final coma .)
    brace_final     reduce using rule 20 (ISBN -> texto dos_puntos brace_inicio STRING coma STRING brace_final coma .)


state 72

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma STRING . brace_final coma
    (17) AUTHOR_DETAILS -> STRING coma INT coma STRING .

  ! shift/reduce conflict for brace_final resolved as shift
    brace_final     shift and go to state 77

  ! brace_final     [ reduce using rule 17 (AUTHOR_DETAILS -> STRING coma INT coma STRING .) ]


state 73

    (18) GENRE -> texto dos_puntos bracket_inicio texto coma texto bracket_final coma .

    coma            reduce using rule 18 (GENRE -> texto dos_puntos bracket_inicio texto coma texto bracket_final coma .)
    brace_final     reduce using rule 18 (GENRE -> texto dos_puntos bracket_inicio texto coma texto bracket_final coma .)


state 74

    (16) INT -> texto dos_puntos . numero

    numero          shift and go to state 70


state 75

    (23) CHARACTER_ENTRY -> brace_inicio STRING coma STRING brace_final .

    coma            reduce using rule 23 (CHARACTER_ENTRY -> brace_inicio STRING coma STRING brace_final .)
    bracket_final   reduce using rule 23 (CHARACTER_ENTRY -> brace_inicio STRING coma STRING brace_final .)


state 76

    (26) REVIEW_ENTRY -> brace_inicio INT coma STRING brace_final .

    coma            reduce using rule 26 (REVIEW_ENTRY -> brace_inicio INT coma STRING brace_final .)
    bracket_final   reduce using rule 26 (REVIEW_ENTRY -> brace_inicio INT coma STRING brace_final .)


state 77

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final . coma

    coma            shift and go to state 78


state 78

    (19) PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma .

    coma            reduce using rule 19 (PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma .)
    brace_final     reduce using rule 19 (PUBLICATION -> texto dos_puntos brace_inicio STRING coma INT coma STRING brace_final coma .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for brace_final in state 72 resolved as shift
